feat(server): refactored package, LDAP integration (#54)
* feat(server): use `common` pkg

* feat(server): use latest packages

* feat(server): developer-mode for backend

* chore(repo): fix pushing buildcache

* chore(ui): better error messages

* chore(server): add test redirectUris

* feat(server): relying on cookies for authing

* test(server): setup LDAP test files

* fix(server): LDAP enable flag
